k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2025-11-07T18:16:09Z"
  generation: 1
  name: fullstack-ingress
  namespace: default
  resourceVersion: "5328"
  uid: 5899b3d1-be30-4d50-b161-257a532e1e25
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend-service
            port:
              number: 8080
        path: /api
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
